--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "pm3",
+  "version": "0.0.3",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.36.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "serve": "^11.3.2"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "date-fns": "^2.16.1"
+    "express": "^4.17.1"
   },
   "scripts": {
+    "postinstall": "bin/check-links.sh",
     "build": "rollup -c",
     "watch": "rollup -c -w",
     "dev": "npm-run-all --parallel start watch",
-    "start": "serve public"
+    "start": "bin/www.js"
   }
 }
